# llvm-project

./: test_red.cpp
.github/workflows/: ci-post-commit-analyzer.yml  docs.yml  libcxx-build-and-test.yaml  libcxx-restart-preempted-jobs.yaml  pr-code-format.yml  pr-request-release-note.yml  release-asset-audit.yml  release-binaries.yml  release-documentation.yml  release-doxygen.yml  release-lit.yml  release-sources.yml  release-tasks.yml  scorecard.yml
clang/lib/AST/: OpenMPClause.cpp
clang/lib/CodeGen/: BackendUtil.cpp  CGDeclCXX.cpp  CGOpenMPRuntime.cpp  CGOpenMPRuntime.h  CGOpenMPRuntimeGPU.cpp  CGStmtOpenMP.cpp  CodeGenFunction.cpp  CodeGenFunction.h  SanitizerMetadata.cpp
clang/lib/Driver/: SanitizerArgs.cpp
clang/lib/Frontend/: CompilerInvocation.cpp
compiler-rt/: CMakeLists.txt
compiler-rt/cmake/: config-ix.cmake
compiler-rt/lib/: CMakeLists.txt
compiler-rt/lib/objsan/: CMakeLists.txt  common.cpp  generate.cpp  objsan_ir_rt.cpp  objsan_preload.cpp  objsan_preload_cuda.cpp  objsan_preload_impl_cuda.cpp  objsan_rt.cpp  timer.h  vm_obj.h  vm_values.cpp  vm_values.h
compiler-rt/lib/objsan/include/: common.h  obj_encoding.h  objsan_preload.h
compiler-rt/lib/objsan/preload/: CMakeLists.txt  objsan_preload.cpp  objsan_preload_cuda.cpp  objsan_preload_impl_cuda.cpp
compiler-rt/test/: CMakeLists.txt
input-gen/: common.h  compile.sh  ig.cpp  recorder.cpp  replay.cpp  timer.h  vm_enc.h  vm_obj.cpp  vm_obj.h  vm_storage.cpp  vm_values.cpp  vm_values.h
input-gen/tests/: acc.c  globals.c  memcmp.c
llvm/docs/: requirements-hashed.txt  requirements.txt
(+188 files in other folders)
